--- a/front-end-react/src/Components/Restaurants/restaurant.css
+++ b/front-end-react/src/Components/Restaurants/restaurant.css
@@ -1,14 +1,22 @@
-.rest-title{
-    text-align: left;
-    font-family:'Times New Roman', Times, serif;
+.rest-title {
+    text-align     : left;
+    font-family    : 'Times New Roman', Times, serif;
     text-decoration: underline;
 }
-.title-box{
-    display: flex;
+
+.title-box {
+    display       : flex;
     flex-direction: row;
 }
-.rest-container{
-    border: 1px solid gray;
+
+.rest-container {
+    border : 1px solid gray;
     padding: 3%;
-    margin: 2%;
+    margin : 2%;
+}
+
+.trash-icon {
+    position: relative;
+    left   : 99%;
+    top     : 1%;
 }
