--- a/front-end-react/src/Components/Home/home.css
+++ b/front-end-react/src/Components/Home/home.css
@@ -9,7 +9,10 @@
     /* width: 500px!important; */
     position: relative;
     top: 50%;
+    left: 20%;
+    background-color: white;
 }
 .locationField-container {
-    height: 500px;
+    height: 300px;
+    background-color:lightgrey;
 }
