--- a/front-end-react/src/Components/Admin/admin.css
+++ b/front-end-react/src/Components/Admin/admin.css
@@ -1,4 +1,15 @@
-.selectedImage{
-    height: 100px;
-    width: 100px;
+.selectedImage {
+    height: 200px;
+    width : 200px;
+    padding: 20px;
+    left: 40%;
+    display: none;
+}
+
+.save-button {
+    position: absolute;
+    top     : 20px;
+    left    : 50%;
+    width: 200px;
+    height: 50px;
 }
